css/style.css
/* ... */
@media (max-width: 991px) {
  .training .training-slider {
    flex-basis: 100%;
  }
}

.training-slider .swiper-slide {
  color: #fff;
  border-radius: 12px;
  height: 290px;
  position: relative;
  background-size: cover;
  overflow: hidden;
}

@media(min-width:768px){
  .training-slider .swiper-slide{
    flex-basis: 260px;
  }
}

.training-slider .training-sport-1 {
  background-image: url("../images/training_slider_1.png");
}

.training-slider .training-sport-2 {
  background-image: url("../images/training_slider_2.png");
}

.training-slider .training-sport-3 {
  background-image: url("../images/training_slider_3.png");
}

.training-slider .swiper-slide .data {
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  bottom: 0;
  width: 100%;
  backdrop-filter: blur(2px) brightness(81%);
}

.training-slider .data span {
  padding: 15px;
  font-size: 19px;
  font-weight: bold;
}

.training-slider .swiper-slide a {
  color: #fff;
  background-color: var(--clr-main);
  border-radius: 7px;
  padding: 15px;
}

/* ============================== OUR IMAGES ======================= */
.our-images {
  padding-top: var(--section-padding-top);
  padding-bottom: var(--section-padding-bottom);
}



.our-images h2 {
  font-size: 30px;
  font-weight: bold;
  text-align: center;
  margin-bottom: 50px;
}

.our-images .container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 19px 15px;
}

.our-images .box {
  height: 229px;
  text-align: center;
}

.our-images .box img {
}

/* ============================  EVENTS ===================== */
.events{
  padding-top: var(--section-padding-top);
  padding-bottom: var(--section-padding-bottom);
  position: relative;
  overflow: hidden;
}

@media(min-width:768px){
  .events-circle{
    border:40px solid var(--clr-main);
    border-radius: 50%;
    position: absolute;
    bottom:30px;
    left:-30px;
    padding:20px;
    background-color: transparent;
  }
}


.events::before{
  content:"";
  width:100%;
  height:100%;
  position: absolute;
  background:#F8F8F8;
  border-top-left-radius: 140px;
  z-index:-1
}




@media(min-width:992px){
  .events .container{
    display: grid;
    grid-template-columns: repeat(2,50%);
    width:990px;
  }
}

.events .info{
  margin-top: 150px;
}

.events .info h3{
  font-size: 21px;
  font-weight: bold;
  color:var(--clr-main);
  margin-bottom: 15px;
}

.events .info p{
  font-size: 29px;
  font-weight: bold;
  color:#25254B;
  line-height: 1.7;
  margin-bottom: 10px;
}

@media(min-width:768px){
  .events .info p{
    max-width:440px;
  }
}

.events .info span{
  font-size: 15px;
  color:#25254B;
  line-height: 1.6;
  display: block;
}

.events .info  a{
  color:#fff;
  background: linear-gradient(to right,#78A3EB,#1E5BFA);
  padding:13px 60px;
  text-align: center;
  font-size: 17px;
  font-weight: bold;
  margin-top: 40px;
  border-radius: 25px;
}

.events .image{
  margin-top: 100px;
}



.events .image-row{

}

@media(max-width:767px){
  .events .image-row{
    display: flex;
    justify-content: space-around;
  }
}


@media(min-width:768px){
  .events .image{
    display: flex;
    gap:14px;
    align-items: center;
    margin-right: auto;
    justify-content: center;
  }
  .events .image-row{
    flex-basis: 1 1 50%;
  }
  .events .image-row.image-row-1{
    transform: translateY(-50px);
  }
}

.events .image-box{
  margin-bottom: 25px;
}

/* ======================== MEDIA CENTER ==================== */
.media-center {
  background-color: #f8f8f8;
  padding-top: 100px;
  padding-bottom: 100px;
  text-align: center;
}

.media-center h2 {
  text-align: center;
  font-size: 25px;
  font-weight: bold;
  position: relative;
  margin-bottom: 70px;
  display: inline-block;
}

.media-center h2 span,
.media-center h2 span i {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.media-center h2 span {
  width: calc(100% + 80px);
  height: 2px;
  display: block;
  margin: 15px auto;
  background-color: #1a1a1a;
}

.media-center h2 span i {
  background-color: #f8f8f8;
  padding: 0 10px;
  top: -4px;
}

.media-center h2 span i::after {
  top: 100%;
  width: 12px;
  height: 11px;
  background-color: var(--clr-main);
  z-index: 333;
  content: "";
  display: block;
  clip-path: polygon(25% 0%, 78% 0, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
  border-radius: 0px;
}

.media-center .container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 30px;
  text-align: start;
}

.media-center .box {
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 6px 15px rgb(0 0 0 / 4%);
}

.media-center .box .image {
}

.media-center .box img {
  width: 100%;
  height: 235px;
}

.media-center .box-data {
  padding: 22px 18px 16px;
}

.media-center .box-data span {
  font-size: 18px;
  color: #c3c3c3;
  display: block;
  margin-bottom: 5px;
}

.media-center .box-data p {
  color: #000;
  font-size: 23px;
  font-weight: bold;
  line-height: 1.5;
  min-height: 140px;
}

.media-center .box-data a {
  color: #fff;
  background-color: var(--clr-main);
  text-align: center;
  padding: 7px 33px;
  border-radius: 8px;
  width: 107px;
  margin-right: auto;
  display: block;
}

/* =============================== PARTNERS ======================= */
.partners {
  min-height: 750px;
  position: relative;
  color: #fff;
  padding: 130px 0;
  position: relative;
}

@media(max-width:767px){
  .partners{
    background-color: var(--clr-dark);
  }
}

.partners-circle{
  bottom:auto;
  left: auto;
  top:-65px;
  right:-25px;
}

@media(min-width:768px){
  .partners::before {
    content: "";
    position: absolute;
    top: -200px;
    left: 0;
    background-color: var(--clr-dark);
    width: 100%;
    height: calc(100% + 50px);
    z-index: -1;
    transform: skewY(-4deg);
    border-bottom-right-radius: 190px;
  }
}


.partners h2 {
  font-size: 35px;
  font-weight: bold;
  text-align: center;
}
/* ... */

